--- a/BigQuery.ipynb
+++ b/BigQuery.ipynb
@@ -29,6 +29,15 @@
     "# API request - fetch the dataset\n",
     "dataset = client.get_dataset(dataset_ref)\n",
     "\n",
+    "# List all the tables in the \"hacker_news\" dataset\n",
+    "tables = list(client.list_tables(dataset))\n",
+    "\n",
+    "# Print names of all tables in the dataset (there are four!)\n",
+    "for table in tables:  \n",
+    "    print(table.table_id)\n",
+    "\n",
+    "list_of_tables = [table.table_id for table in tables]\n",
+    "\n",
     "# Construct a reference to the \"global_air_quality\" table\n",
     "table_ref = dataset_ref.table(\"global_air_quality\")\n",
     "\n",
@@ -119,6 +128,147 @@
     "zero_pollution_results = query_job.to_dataframe() # Your code goes here\n",
     "\n",
     "print(zero_pollution_results.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"\n",
+    "        SELECT parent, COUNT(1) AS NumPosts\n",
+    "        FROM `bigquery-public-data.hacker_news.comments`\n",
+    "        GROUP BY parent\n",
+    "        HAVING COUNT(1) > 10\n",
+    "        \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Query to find out the number of accidents for each day of the week\n",
+    "query = \"\"\"\n",
+    "        SELECT COUNT(consecutive_number) AS num_accidents, \n",
+    "               EXTRACT(DAYOFWEEK FROM timestamp_of_crash) AS day_of_week\n",
+    "        FROM `bigquery-public-data.nhtsa_traffic_fatalities.accident_2015`\n",
+    "        GROUP BY day_of_week\n",
+    "        ORDER BY num_accidents DESC\n",
+    "        \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rides_per_month_query = \"\"\"\n",
+    "                        SELECT EXTRACT(MONTH FROM trip_start_timestamp) AS month, COUNT(1) AS num_trips\n",
+    "                        FROM `bigquery-public-data.chicago_taxi_trips.taxi_trips`\n",
+    "                        WHERE EXTRACT(YEAR FROM trip_start_timestamp) = 2017\n",
+    "                        GROUP BY month\n",
+    "                        ORDER BY month\n",
+    "                        \"\"\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "speeds_query = \"\"\"\n",
+    "               WITH RelevantRides AS\n",
+    "               (\n",
+    "                   SELECT EXTRACT(HOUR FROM trip_start_timestamp) AS hour_of_day,\n",
+    "                          trip_miles, \n",
+    "                          trip_seconds\n",
+    "                   FROM `bigquery-public-data.chicago_taxi_trips.taxi_trips`\n",
+    "                   WHERE trip_start_timestamp > '2017-01-01' AND \n",
+    "                         trip_start_timestamp < '2017-07-01' AND \n",
+    "                         trip_seconds > 0 AND \n",
+    "                         trip_miles > 0\n",
+    "                   \n",
+    "               )\n",
+    "               SELECT hour_of_day, \n",
+    "               COUNT(1) AS num_trips,\n",
+    "               3600 * SUM(trip_miles) / SUM(trip_seconds) AS avg_mph\n",
+    "               FROM RelevantRides\n",
+    "               GROUP BY hour_of_day\n",
+    "               ORDER BY hour_of_day\n",
+    "               \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answers_query = \"\"\"\n",
+    "                SELECT a.id, a.body, a.owner_user_id\n",
+    "                FROM `bigquery-public-data.stackoverflow.posts_questions` AS q \n",
+    "                INNER JOIN `bigquery-public-data.stackoverflow.posts_answers` AS a\n",
+    "                    ON q.id = a.parent_id\n",
+    "                WHERE q.tags LIKE '%bigquery%'\n",
+    "                \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigquery_experts_query = \"\"\"\n",
+    "                         SELECT a.owner_user_id AS user_id, COUNT(1) AS number_of_answers\n",
+    "                         FROM `bigquery-public-data.stackoverflow.posts_questions` AS q\n",
+    "                         INNER JOIN `bigquery-public-data.stackoverflow.posts_answers` AS a\n",
+    "                             ON q.id = a.parent_Id\n",
+    "                         WHERE q.tags LIKE '%bigquery%'\n",
+    "                         GROUP BY a.owner_user_id\n",
+    "                         \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def expert_finder(topic, client):\n",
+    "    '''\n",
+    "    Returns a DataFrame with the user IDs who have written Stack Overflow answers on a topic.\n",
+    "\n",
+    "    Inputs:\n",
+    "        topic: A string with the topic of interest\n",
+    "        client: A Client object that specifies the connection to the Stack Overflow dataset\n",
+    "\n",
+    "    Outputs:\n",
+    "        results: A DataFrame with columns for user_id and number_of_answers. Follows similar logic to bigquery_experts_results shown above.\n",
+    "    '''\n",
+    "    my_query = \"\"\"\n",
+    "               SELECT a.owner_user_id AS user_id, COUNT(1) AS number_of_answers\n",
+    "               FROM `bigquery-public-data.stackoverflow.posts_questions` AS q\n",
+    "               INNER JOIN `bigquery-public-data.stackoverflow.posts_answers` AS a\n",
+    "                   ON q.id = a.parent_Id\n",
+    "               WHERE q.tags like '%{topic}%'\n",
+    "               GROUP BY a.owner_user_id\n",
+    "               \"\"\"\n",
+    "\n",
+    "    # Set up the query (a real service would have good error handling for \n",
+    "    # queries that scan too much data)\n",
+    "    safe_config = bigquery.QueryJobConfig(maximum_bytes_billed=10**10)      \n",
+    "    my_query_job = client.query(my_query, job_config=safe_config)\n",
+    "\n",
+    "    # API request - run the query, and return a pandas DataFrame\n",
+    "    results = my_query_job.to_dataframe()\n",
+    "\n",
+    "    return results"
    ]
   }
  ],
